refactor: deprecated된 URL 제거, URI 사용